HVAC Backup 2/objects/Customer_Partner_Relationship__c(1).object
<CustomObject>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Channel partner account associated to the customer (VIP)</inlineHelpText>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Channel Partner does not exist or does not match filter criteria. Please check the channel partner name.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <infoMessage>Channel Partners</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>VIP_Customer_Dealers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer Name ( VIP )</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Residential Customer, Commercial Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.Category__c</field>
                <operation>equals</operation>
                <value>VIP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VIP Customer Partners (Customer)</relationshipLabel>
        <relationshipName>Customer_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>Select serviced product types.</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC Dealer</fullName>
                    <default>true</default>
                    <label>AC Dealer</label>
                </value>
                <value>
                    <fullName>Water Purifier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_No_Backend_DU__c</fullName>
        <externalId>true</externalId>
        <label>Unique No Backend DU</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>VIP Customer Partner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Customer Partner Relation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Customer Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>